# assetable

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
assetable/pipeline/: ai_executor.py  pdf_splitter.py  pipeline.py
docs/: assetable_implementation_review.md  bug.md
docs/done/: 20240724-project-setup-and-src-layout.md  20250712-ai-processing-implementation.md  20250712-ai-processing-testing.md  20250712-feature-add-tests.md  20250712-feature-concrete-reference-types.md  20250712-feature-config-class.md  20250712-implement-file-manager.md  20250712-ollama-integration.md  20250712-pdf-splitting-feature.md  20250712-pdf-splitting-testing.md  20250712-pipeline-engine-implementation.md  20250712-pipeline-engine-testing.md  20250712-project-setup-and-src-layout.md
output/test/markdown/: page_0001.md
output/test/pageStructure/: page_0001_structure.json
src/assetable/: cli.py  config.py  file_manager.py  models.py
src/assetable/ai/: __init__.py  ai_steps.py  ollama_client.py  prompts.py  vision_processor.py
src/assetable/pdf/: pdf_splitter.py
src/assetable/pipeline/: __init__.py  ai_steps.py  engine.py  pdf_splitter.py
tests/: conftest.py  test_config.py  test_file_manager.py  test_integration.py  test_models.py  test_ollama_client.py  test_pdf_splitter.py  test_pipeline_engine.py  test_vision_processor.py
tests/ai/: test_enhanced_vision_processor.py  test_prompts.py
tests/integration/: test_integration.py
tests/pdf/: test_pdf_splitter.py
tests/pipeline/: test_ai_pipeline_steps.py  test_pipeline_engine.py
