[project]
name = "assetable"
version = "0.1.0"
description = "Convert scanned books into AI- and human-readable digital assets"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.5.1",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "typer>=0.16.0",
]

[project.scripts]
assetable = "assetable.cli:app"

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
