[project]
name = "assetable"
version = "0.1.0"
description = "Convert scanned books into AI- and human-readable digital assets"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.5.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "pypdfium2>=4.30.1",
    "typer>=0.16.0",
]

[project.scripts]
assetable = "assetable.cli:app"

[dependency-groups] # [project.optional-dependencies] からこちらに戻す
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
